--- a/css/main.css
+++ b/css/main.css
@@ -1353,7 +1353,7 @@ header .logo a {
     max-height: 550px;
     background: #FFFFFF;
     position: relative;
-    margin: 0 auto;
+    margin: 0 20px;
 }
 
 .modal .close {
