--- a/css/main.css
+++ b/css/main.css
@@ -1357,7 +1357,23 @@ header .logo a {
     margin-left: -300px;
     top: 50%;
     margin-top: -275px;
+    text-align: center;
 }
+  
+@media screen and (min-width: 768px) { 
+    .modal:before {
+      display: inline-block;
+      vertical-align: middle;
+      content: " ";
+      height: 100%;
+    }
+}
+  
+.modal-dialog {
+    display: inline-block;
+    text-align: left;
+    vertical-align: middle;
+  }
 
 .modal .close {
     height: auto;
