--- a/css/main.css
+++ b/css/main.css
@@ -1353,10 +1353,10 @@ header .logo a {
     max-height: 550px;
     background: #FFFFFF;
     position: relative;
-    left: 50%;
+    /* left: 50%;
     margin-left: -300px;
     top: 50%;
-    margin-top: -275px;
+    margin-top: -275px; */
     text-align: center;
 }
   
