--- a/css/main.css
+++ b/css/main.css
@@ -1353,9 +1353,13 @@ header .logo a {
     max-height: 550px;
     background: #FFFFFF;
     position: relative;
-    left: 50%;
+    /* left: 50%;
     margin-left: -300px;
-    top: 20%;
+    top: 20%; */
+}
+
+#containerDiv{
+    margin : 0 auto;
 }
 
 .modal .close {
