--- a/css/main.css
+++ b/css/main.css
@@ -1352,7 +1352,7 @@ header .logo a {
     max-width: 600px;
     max-height: 550px;
     background: #FFFFFF;
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
 }
