--- a/css/main.css
+++ b/css/main.css
@@ -1355,6 +1355,8 @@ header .logo a {
     position: absolute;
     top: 50%;
     left: 50%;
+    margin-top: -275px;
+    margin-left: -300px;
 }
 
 .modal .close {
