--- a/css/main.css
+++ b/css/main.css
@@ -1353,10 +1353,7 @@ header .logo a {
     max-height: 550px;
     background: #FFFFFF;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -275px;
-    margin-left: -300px;
+    margin: auto;
 }
 
 .modal .close {
