--- a/css/main.css
+++ b/css/main.css
@@ -1353,7 +1353,10 @@ header .logo a {
     max-height: 550px;
     background: #FFFFFF;
     position: absolute;
-    margin: auto;
+    top: 50%;
+    left: 50%;
+    margin-left: -300px;
+    margin-top: -275px;
 }
 
 .modal .close {
